@@ -2,7 +2,8 @@
 2018-02-16  Dave Pitts <dpitts@cozx.com>
 
 	* testsuite.src/listings.at: BUG #494 Added test case for embedded
-	  quotes, eg. 'yyy-'hello
+	  quotes, eg. 'yyy-'hello.
+	  Added test case for the report writer.
 
 2017-11-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
